@@ -804,13 +804,24 @@ literal|null
 decl_stmt|;
 try|try
 block|{
+name|ObjectName
+name|instance
+init|=
+operator|new
+name|ObjectName
+argument_list|(
+name|jmxRootName
+operator|+
+literal|":*"
+argument_list|)
+decl_stmt|;
 name|objectNames
 operator|=
 name|server
 operator|.
 name|queryNames
 argument_list|(
-literal|null
+name|instance
 argument_list|,
 name|exp
 argument_list|)
